# l10n-iran

./: .copier-answers.yml  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  .travis.yml  README.md  requirements.txt
account_jalali_date/: README.rst
account_jalali_date/model/: __init__.py  account_jalali_date_printout.py
account_jalali_date/view/: account_jalali_date_printout_view.xml
account_jalali_date_printout/: README.rst  __openerp__.py
base_jalali_convert/: README.rst  __init__.py  __openerp__.py  convert_jalali.py
l10_ir_accounting/: README.md  __init__.py  __manifest__.py
l10_ir_accounting/models/: __init__.py  account_group.py
l10_ir_accounting/readme/: DESCRIPTION.rst  USAGE.rst
l10_ir_accounting/views/: account_group_view.xml
l10n_ir/: __manifest__.py
l10n_ir/data/: account_chart_template_data.xml  l10n_ir_chart_post_data.xml  (+1 more)
l10n_ir_account/: README.rst  __manifest__.py
l10n_ir_accounting/: __manifest__.py
l10n_ir_base/: README.md  README.rst  __manifest__.py
l10n_ir_country_states/: README.rst  __init__.py  __openerp__.py
l10n_ir_hr_contract/: README.rst  __manifest__.py
l10n_ir_hr_payroll/: README.rst  __manifest__.py
l10n_ir_states/: README.rst  __manifest__.py
mrp_jalali_date/: README.rst  __openerp__.py
mrp_jalali_date_printout/: README.rst
purchase_jalali_date/: README.rst  __openerp__.py
purchase_jalali_date_printout/: README.rst
sale_jalali_date/: README.rst  __openerp__.py
sale_jalali_date_printout/: README.rst
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+95 files in other folders)
