[project]
name = "odoo-addons-oca-l10n-iran"
version = "17.0.20231211.0"
dependencies = [
    "odoo-addon-l10n_ir_account>=17.0dev,<17.1dev",
    "odoo-addon-l10n_ir_states>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
